<resources>
    <string name="app_name">Class Routine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Class Routine</string>
    <string name="nav_header_subtitle">Be organised and be on time</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_today">Today</string>
    <string name="menu_week">Week View</string>
    <string name="menu_class_works">Class Works</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
</resources>
