<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/today"
            android:icon="@drawable/icon_today_24px"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/week"
            android:icon="@drawable/icon_week_view_24px"
            android:title="@string/menu_week" />
        <item
            android:id="@+id/classwork"
            android:icon="@drawable/icon_class_work_24px"
            android:title="@string/menu_class_works" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/icon_about_24px"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/exit"
                android:icon="@drawable/icon_exit_24px"
                android:onClick="exit"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
