<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/today">

    <fragment
        android:id="@+id/today"
        android:name="com.example.classroutine.ui.today.TodayFragment"
        android:label="@string/menu_today"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/week"
        android:name="com.example.classroutine.ui.week_view.WeekViewFragment"
        android:label="@string/menu_week"
        tools:layout="@layout/fragment_week_view" />

    <fragment
        android:id="@+id/classwork"
        android:name="com.example.classroutine.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_class_works"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/about"
        android:name="com.example.classroutine.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/exit"
        android:name="com.example.classroutine.ui.send.SendFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_send" />
</navigation>